public_html/css/main.css
/* ... */
.btn {
    display: inline-block;
    padding: 0.4em 1.3em;
    color: #E1E1E1;
    font-family: "Inconsolata", Arial, Helvetica, sans-serif;
    font-size: 0.9em;
    text-transform: uppercase;
    letter-spacing: 0.03em;
    text-decoration: none;
}


/* TODO: Different active state than hover??? */

button:hover,
button:focus,
button:active {
    -webkit-transform: translateY(-0.05rem);
    transform: translateY(-0.05rem);
    box-shadow: 0.1rem 0.2em 0.3rem rgba(150, 150, 150, 0.25);
    text-decoration: none;
    background-color: #DD4D6A;
    color: #191919;
}

/*  =========================
 *  HEADER & NAVIGATION
 *  =========================*/

.nav-trigger {
    width: 5rem;
    height: 2.5rem;
    margin: 0 auto;
    position: absolute;
    left: 50%;
    -webkit-transform: translate(-50%, 0);
	-ms-transform: translate(-50%, 0);
	transform: translate(-50%, 0);
    clip: rect(0, 0, 0, 0);
}

label[for="nav-trigger"]{
	width: 5rem;
	display: block;
	height: 2.5rem;
    margin: 0 auto;
    padding: 0;
    background-image: url(../img/Logo-03.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
	-webkit-transition: all 0.25s ease-in-out;
	transition: all 0.25s ease-in-out;
}

label[for="nav-trigger"]:hover,
label[for="nav-trigger"]:focus,
label[for="nav-trigger"]:active {
	opacity: 0.8;
}

#main-nav {
    overflow: hidden;
    min-width: 600px;
    width: 75%;
    margin: 0 auto;
}


/* NOTE: any element that uses this also requires the .btn class */

.btn-nav {
    font-size: 1rem;
    color: #E1E1E1;
    padding: 0rem 0rem 0.5rem 0rem;
    text-align: center;
}

.btn-nav:hover,
.btn-nav:active {
    background-color: #191919;
    color: #E1E1E1;
    text-decoration: none;
    box-shadow: none;
}

.btn-nav.current {
    border-bottom: 0.4rem solid #DD4D6A;
}

header {
    display: block;
    padding: 1em 0 0 0;
}


/*  =========================
 *  BANNERS
 *  =========================*/

.banner-container {
    position: relative;
    width: 100%;
    height: 20vh;
    /*    min-height: 23rem;*/
    margin-bottom: 2rem;
}

#banner-image {
    position: relative;
    left: 50%;
    -webkit-transform: translate(-50%, 0);
    -ms-transform: translate(-50%, 0);
    transform: translate(-50%, 0);
    padding: 0;
    margin: 0;
    width: 100vw;
    height: 20vh;
    /*    min-height: 23rem;*/
    overflow: hidden;
}

/* This is the overlay for the banner image */

#banner-image:after {
    position: absolute;
    content: "";
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.95));
    z-index: 5;
}

#banner-content {
    position: absolute;
    bottom: 0;
    left: 0;
    display: block;
    padding: 0rem 5rem;
    line-height: 0;
}

#banner-content p {
    margin: 0;
    padding: 0;
    width: 28rem;
    font-size: 1.3rem;
    font-weight: 700;
    line-height: 1.5em;
    letter-spacing: 0.1rem;
    color: #E1E1E1;
}

#banner-content h1 {
    display: inline-block;
    margin: 0;
    padding: 0;
    font-size: 4rem;
    letter-spacing: 0.3rem;
    line-height: 0.85em;
    color: #E1E1E1;
}

#home-banner,
#home-banner #banner-image {
    height: 35vh;
    min-height: 23rem;
}

#home-banner #banner-content {
    position: absolute;
    top: 0;
    left: 0;
    padding: 2rem 5rem;
}

#home-banner p {
    font-family: "Source Sans Pro";
    margin: 0;
    padding: 0;
    width: 28rem;
    font-size: 1.3rem;
    font-weight: 100;
    line-height: 1.5em;
    letter-spacing: 0.1rem;
    color: #E1E1E1;
}

#home-banner h1 {
    font-size: 6rem;
    font-weight: 700;
    /*	border-bottom: 0.4rem solid #DD4D6A;*/
    margin-bottom: 1rem;
}


/*  =========================
 *  CONTENT FRAGMENTS
 *  =========================*/

/* HOME & INVENTORY FRAGMENTS */

.home-content.content-container h2,
.banner-container h1 {
    text-transform: uppercase;
}

.content-container h2 {
    /*    text-transform: capitalize;*/
    display: inline;
    margin: 0 0 1rem 0;
    padding: 0;
}

.content-container span {
    display: inline;
    float: right;
    padding-top: 0.6rem;
    font-size: 1rem;
    text-transform: capitalize;
}


/* SERVICES & BLOG FRAGMENTS */

.col6of6.content-container img,
.col6of6.content-container .content-fragment-text {
    width: 50%;
    float: left;
}

.col6of6.content-container .content-fragment-text {
    padding-left: 1.5rem;
}

.col6of6.content-container span {
    display: block;
    float: none;
    color: #DD4D6A;
}

.col6of6.content-container p {
    margin-top: 0.25rem;
}


/* TODO: Below this point hasn't been udpated other than the media queries. */


/*  =========================
 *  DETAIL PAGES
 *  =========================*/

.content-fragment-text ul {
    padding: 0;
}

.content-fragment-text li {
    list-style: square;
    color: #666666;
    padding: 0 0 0.5rem 0;
    margin-left: 1rem;
}

.star-rating {
    color: #DD4D6A;
    font-size: 1.5rem;
    letter-spacing: 0.2rem;
    line-height: 1rem;
    padding: 0.5rem 0 0 0;
}

.content-fragment-text .star-rating span {
    display: inline-block;
    margin: 0;
    padding: 0;
    color: #E1E1E1;
    font-size: 1rem;
    letter-spacing: 0;
    font-weight: 400;
}

.content-details-container {
    position: relative;
    display: block;
    width: 100%;
    padding: 0 1rem;
    line-height: 1rem;
}

.content-selector ul {
    display: inline-block;
    margin: 0;
    padding: 0;
    background: #666666;
}

.content-selector a {
    margin: 0;
    border: none;
    font-weight: 600;
}

.content-selector a:hover,
.content-selector a:focus,
.content-selector a:active {
    background-color: #DD4D6A;
    color: #191919;
    font-weight: 600;
    opacity: 1;
}

#content-details-desc {
    display: none;
}

#content-details-text p {
    margin: 0;
    padding: 0.5rem 0 0 0;
    line-height: 1.2rem;
}

#content-details-reviews {
    padding: 0.5rem 0;
}
/* ... */

